[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Main/HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main/Main.gd" type="Script" id=4]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -262135, 0, 0, -262134, 0, 0, -131059, 0, 0, -131058, 0, 0, -24, -1073741824, 0, -19, -1073741824, 0, -18, -1073741824, 0, -4, 0, 0, 65532, 0, 0, 131048, -1073741824, 0, 131049, -1073741824, 0, 131056, 0, 0, 131057, 0, 0, 131058, 0, 0, 131059, 0, 0, 131060, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 196588, 0, 0, 196589, 0, 0, 196590, 0, 0, 196591, 0, 0, 196592, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131084, 0, 0, 131085, 0, 0, 327695, 0, 0, 327696, 0, 0, 458764, 0, 0, 458765, 0, 0, 655370, 0, 0, 655371, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource( 5 )]
position = Vector2( 128, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -320, 0 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[connection signal="player_update_hud" from="." to="HUD" method="_on_Main_player_update_hud"]
[connection signal="ready" from="." to="Player" method="_on_Main_ready"]
[connection signal="upgrade_system" from="." to="Player" method="_on_Main_upgrade_system"]
[connection signal="update_hud" from="Player" to="." method="_on_Player_update_hud"]
[connection signal="upgrade_system" from="HUD" to="." method="_on_HUD_upgrade_system"]
